focusing on playing the game with user input through prompt, will work on DOM interaction after i can finish a game session. function playerChoice finished for current restraints'

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 .battleground {
     display: flex;
 }
+
 .playerInterface,
 .computerInterface {
     width: 50%;
@@ -22,7 +23,11 @@
     align-items: center;
 }
 
-.roundResult, 
+.roundResult,
 main h1 {
     text-align: center;
+}
+
+.chosenFighter {
+    background-color: green;
 }
