--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.battleground section section {
+.battleground button {
     width: 100px;
     height: 100px;
     border: 5px solid red;
@@ -30,4 +30,8 @@ main h1 {
 
 .chosenFighter {
     background-color: green;
+}
+
+.body {
+    
 }
