--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,27 @@
+* {
+    box-sizing: border-box;
+}
+
 .battleground button {
-    width: 100px;
-    height: 100px;
-    border: 5px solid red;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 150px;
+    border: 5px solid blue;
+    margin: 8px;
+}
+.fighter1,
+.fighter2 {
+    width: 150px;
+    height: 150px;
+    border: 5px dotted green;
+}
+.fighter2 {
+    border-color: salmon;
+}
+
+.attackBar {
+    margin: 0 20%;
 }
 
 .battleground {
@@ -10,9 +30,10 @@
 
 .playerInterface,
 .computerInterface {
+    text-align: center;
     width: 50%;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
 }
@@ -23,8 +44,9 @@
     align-items: center;
 }
 
-.roundResult,
-main h1 {
+.roundResult, 
+h1,
+h2 {
     text-align: center;
 }
 
@@ -32,6 +54,31 @@ main h1 {
     background-color: green;
 }
 
+.output {
+    border: 2px solid gray;
+    margin: 2% 20%;
+}
 /* main {
     display: none;
 } */
+
+#rock,
+#npc_rock {
+    background-image: url('../images/rock.jpg');
+    background-size: 150%;
+    background-position: center;
+}
+
+#paper,
+#npc_paper {
+    background-image: url('../images/paper.jpg');
+    background-size: 300%;
+    background-position: 0 0;
+}
+
+#scissor,
+#npc_scissor {
+    background-image: url('../images/scissor.jpg');
+    background-size: 175%;
+    background-position: 30%;
+}
