--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     width: 150px;
     height: 150px;
-    border: 5px solid blue;
+    border: 5px solid salmon;
     margin: 8px;
 }
 .fighter1,
@@ -15,9 +15,10 @@
     width: 150px;
     height: 150px;
     border: 5px dotted green;
+    /* background: none !important; */
 }
 .fighter2 {
-    border-color: salmon;
+    border-color: violet;
 }
 
 .attackBar {
@@ -50,34 +51,31 @@ h2 {
     text-align: center;
 }
 
-.chosenFighter {
-    background-color: green;
-}
-
 .output {
     border: 2px solid gray;
-    margin: 2% 20%;
+    margin: 2% 30%;
+    padding: 2%;
 }
 /* main {
     display: none;
 } */
 
-#rock,
-#npc_rock {
+.rock,
+.npc_rock {
     background-image: url('../images/rock.jpg');
     background-size: 150%;
     background-position: center;
 }
 
-#paper,
-#npc_paper {
+.paper,
+.npc_paper {
     background-image: url('../images/paper.jpg');
     background-size: 300%;
     background-position: 0 0;
 }
 
-#scissor,
-#npc_scissor {
+.scissor,
+.npc_scissor {
     background-image: url('../images/scissor.jpg');
     background-size: 175%;
     background-position: 30%;
