established areas for players, npc, the battlegrounds

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+.battle {
+    display: flex;
+    flex-direction: row;
+} 
+
 .battleground button {
     display: flex;
     flex-direction: column;
