--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     flex-direction: row;
 } 
 
-.battleground button {
+button {
     display: flex;
     flex-direction: column;
     width: 150px;
