--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ button {
 .fighter2 {
     width: 150px;
     height: 150px;
-    border: 5px dotted green;
+    border: 5px dotted lightblue;
     /* background: none !important; */
 }
 .fighter2 {
-    border-color: violet;
+    border-color: lightseagreen;
 }
 
 .attackBar {
@@ -32,7 +32,8 @@ button {
 
 .battleground {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .playerInterface,
@@ -58,9 +59,7 @@ h2 {
 }
 
 .output {
-    border: 2px solid gray;
-    margin: 2% 30%;
-    padding: 2%;
+    border: 5px dotted black;
 }
 /* main {
     display: none;
@@ -90,4 +89,5 @@ h2 {
 .selectedFighter {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
