--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+.intro {
+    border: 5px dotted black
+}
+
 .battle {
     display: flex;
     flex-direction: row;
@@ -54,7 +58,7 @@ button {
 
 .roundResult, 
 h1,
-h2 {
+h4 {
     text-align: center;
 }
 
