gave battleground a width of 50% to help spacing stay consistant

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    width: 50%;
 }
 
 .playerInterface,
