--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     flex-direction: row;
 } 
 
-button {
+.attackBar > button {
     display: flex;
     flex-direction: column;
     width: 150px;
@@ -98,4 +98,10 @@ h4 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.restart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
